src/snapshots/afrotd__parser__tests__interpretation_3.3.6_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 6
index: 5
text: "B10 tackelt A12. Ein Schiedsrichter stellt fest, dass B10’s Trikot\ndurch eine Verletzung an A12’s Arm mit Blut durchtränkt wurde."
ruling: "Beide Spieler müssen das Spiel verlassen; A12 zur Behandlung seiner\noffenen Wunde und B10 zur Feststellung durch das medizinische Personal, ob das Trikot gewechselt werden muss."
