src/snapshots/afrotd__parser__tests__interpretation_3.3.6_7.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 6
index: 7
text: "Im zweiten Down wird der Team A-Ballträger inbounds gestoppt.\nDie Game Clock wird aufgrund einer Verletzung eines Team B-Spielers\nangehalten. (a) Kein anderer Spieler hat sich verletzt, (b) auch ein Team\nA-Spieler ist verletzt, (c) der Referee lässt ein Medien-Timeout zu."
ruling: "Zur Vorbereitung der weiteren Spielfortsetzung zeigt der Referee an, dass bei (a), (b) und (c) die Play Clock auf 40 Sekunden gesetzt\nwird. Play Clock und Game Clock starten beide mit dem Signal zur Ballfreigabe durch den Referee."
