src/snapshots/afrotd__parser__tests__interpretation_3.3.9_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 9
index: 1
text: "Nachdem der Ball dead ist, blockt A55 B33 gegen dessen Taille\nund dadurch zu Boden. Als B33 mit dem Kopf auf den Boden prallt, verliert er den Helm."
ruling: "Dead Ball Foul. 15-Meterstrafe vom Succeeding Spot. B33 muss das Spiel für einen Down verlassen, da sein\nHelm durch das Spielgeschehen und nicht durch ein Helmfoul verloren\nwurde. B33 kann im Spiel bleiben, wenn Team B ein Timeout nimmt."
