src/snapshots/afrotd__parser__tests__interpretation_3.3.9_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 9
index: 5
text: "Während eines Laufspiels, das inbounds endet, verliert ein Linebacker seinen Helm vollständig. Als der Ball dead wird, wird die Game Clock angehalten und steht bei 0:45 in der zweiten Spielperiode."
ruling: "Die Play Clock wird auf 40 Sekunden gestellt. Team A hat\ndie Möglichkeit eines 10-Sekundenabzugs von der Game Clock. Wenn\nTeam A diese Option wahrnimmt, wird die Game Clock auf 0:35 gesetzt\nund der Referee startet die Game Clock mit der Ballfreigabe, außer\nTeam B nimmt ein Timeout. Wenn Team B ein Timeout nimmt, um den\n10-Sekunden-Abzug von der Game Clock zu vermeiden, bleibt die Game Clock auf 0:45 stehen, die Play Clock wird auf „25“ gestellt und die\nGame Clock startet mit dem Snap."
